# nonebot-plugin-bnhhsh

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_bnhhsh/: __init__.py  __main__.py  config.py
